Added contact removal history

--- a/force-app/main/default/classes/contactTable.cls
+++ b/force-app/main/default/classes/contactTable.cls
@@ -1,7 +1,7 @@
 public with sharing class contactTable {
 
     @AuraEnabled(cacheable = true)
-    public static  List<ContactWrapper> fetchContacts() {
+    public static List<ContactWrapper> fetchContacts() {
         List<Contact> contacts = [SELECT Name, Email, Account.Name FROM Contact];
         List<ContactWrapper> result = new List<ContactWrapper>();
         for (Contact c: contacts){
@@ -16,8 +16,18 @@ public with sharing class contactTable {
     }
 
     @AuraEnabled
-    public static void deleteContacts(List<Id> accountIds){
-        delete [SELECT Id FROM Contact where id in :accountIds];
+    public static void deleteContacts(List<Id> contactIds){
+        try {
+            List<Contact> contacts = new List<Contact>();
+            List<Case> cases = [SELECT Id, contactId FROM Case WHERE contactId in :contactIds];
+            delete cases;
+            for (Id item: contactIds) {
+                contacts.add(new Contact(Id = item));
+            }
+            delete contacts;
+        } catch (DmlException e) {
+            throw new AuraHandledException(e.getMessage());
+        }
     }
 
 
